View GameDetail: Added big image with black/white effect - Added Logo 'rounded' Showing info: title, summary, cover, release-date and platforms Showing screenshots

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,6 @@
 </div>
 
 
-<div class="container mainContainer">
-
+<div class="" style="overflow: hidden;">
   <router-outlet></router-outlet>
-
 </div>
