--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800|Open+Sans:300,400,600,800');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700');
 
 *{
     border: 0;
@@ -8,9 +9,11 @@
 
 body {
     /* font-family: 'Montserrat', sans-serif!important; */
-    font-family: 'Open Sans', sans-serif!important;
-    font-size: 18px!important;
+    /* font-family: 'Open Sans', sans-serif!important; */
+    font-family: 'Source Sans Pro', sans-serif!important;
+    font-size: 20px!important;
     font-weight: 400!important;
+    letter-spacing: 0.5px;
 } 
 
 /* Center Navbar */
