--- a/src/app/components/platform-list/platform-list.component.html
+++ b/src/app/components/platform-list/platform-list.component.html
@@ -1,12 +1,27 @@
-<div class="card-columns">
-
-  <div class="card" *ngFor="let platform of platforms">
-    <img class="card-img-top img-responsive" [src]="platform | NoPicPipe"  alt="{{platform.name}}">
-    <div class="card-body">
-      <h5 class="card-title">{{platform.name}}</h5>
-      <p class="card-text">{{platform.slug}}</p>
-      <a [href]='platform.url' target="_blank" class="btn btn-outline-info btn-block">See card <i class="fas fa-external-link-alt" style="float: right; margin: 4px;"></i></a>
+<div class="container mainContainer">
+  <div class="row platformRow" *ngFor="let platform of platforms">
+    <div class="col-1">
+      <img [src]="platform | NoPicPipe" alt="{{platform.slug}}" class="img-fluid">
     </div>
+    <div class="col-5">
+      {{platform.name}}
+    </div>
+    <div class="col-1">
+      {{platform.games.length}}
+    </div>
+    <div class="col-2">
+      <i class="fas fa-link fa-xs colorBlue"></i>
+    </div>
+    
+    <!-- <div class="card-columns">
+      <div class="card" *ngFor="let platform of platforms">
+        <img class="card-img-top img-responsive" [src]="platform | NoPicPipe"  alt="{{platform.name}}">
+        <div class="card-body">
+          <h5 class="card-title">{{platform.name}} {{platform.id}}</h5>
+          <p class="card-text">{{platform.slug}}</p>
+          <a [href]='platform.url' target="_blank" class="btn btn-outline-info btn-block">See card <i class="fas fa-external-link-alt" style="float: right; margin: 4px;"></i></a>
+        </div>
+      </div>    
+    </div> -->
   </div>
-  
 </div>
