--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark container-fluid" style="background: #262a40;">
+  <div class="container p-0">
   <a class="navbar-brand" [routerLink]="['home']">
     <img src="assets/imgs/Video-Game-Controller-Icon.png" width="64" height="64">
   </a>
@@ -20,5 +21,6 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form> -->
+  </div>
   </div>
 </nav>
