--- a/src/app/components/platform-list/platform-list.component.html
+++ b/src/app/components/platform-list/platform-list.component.html
@@ -1,15 +1,15 @@
 <div class="container mainContainer">
   <div class="row platformRow" *ngFor="let platform of platforms">
-    <div class="col-1">
-      <img [src]="platform | NoPicPipe" alt="{{platform.slug}}" class="img-fluid">
+    <div class="col-2 col-sm-2 text-center">
+      <img [ngClass]="{'mW90': platform}" [src]="platform | NoPicPipe" alt="{{platform.slug}}" class="img-fluid">
     </div>
-    <div class="col-5">
+    <div class="col-6 col-sm-6">
       {{platform.name}}
     </div>
-    <div class="col-1">
+    <div class="col-2 col-sm-2">
       {{platform.games.length}}
     </div>
-    <div class="col-2">
+    <div class="col-2 col-sm-2">
       <i class="fas fa-link fa-xs colorBlue"></i>
     </div>
     
