--- a/src/styles.css
+++ b/src/styles.css
@@ -128,7 +128,18 @@ li.nav-item:last-child {
 /************ PLATFORM LIST ******************/
 
 .platformRow {
-    margin: 0 0 10px 0;
+    border-radius: 8px;
+    padding: 5px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+.platformRow:hover {
+    padding: 5px;
+    
+    background: rgba(204,204,204,0.4);
+    border-radius: 8px;
+    transition: all 0.25s ease-in-out;
+    
 }
 /************ PLATFORM LIST ******************/
 
