Added to platform view last release games

--- a/src/app/components/platform/platform.component.html
+++ b/src/app/components/platform/platform.component.html
@@ -1,3 +1,8 @@
-<p>
-  platform works!
-</p>
+<div class="container mainContainer">
+  <div class="row" *ngFor="let NewGameOfPlatform of NewGamesOfPlatform">
+     <h1>{{NewGameOfPlatform.game.name}}</h1>
+     <div class="clearfix"></div>
+     <p>{{NewGameOfPlatform.game.summary}}</p>
+     
+  </div>
+</div>
