--- a/src/app/components/platform-list/platform-list.component.html
+++ b/src/app/components/platform-list/platform-list.component.html
@@ -1,16 +1,13 @@
 <div class="container mainContainer">
-  <div class="row platformRow" *ngFor="let platform of platforms">
+  <div class="row platformRow" *ngFor="let platform of platforms" [routerLink]="['/platform', platform.id]">
     <div class="col-2 col-sm-2 text-center">
       <img [ngClass]="{'mW90': platform}" [src]="platform | NoPicPipe" alt="{{platform.slug}}" class="img-fluid">
     </div>
-    <div class="col-6 col-sm-6">
+    <div class="col-5 col-sm-5">
       {{platform.name}}
     </div>
-    <div class="col-2 col-sm-2">
-      {{platform.games.length}}
+    <div class="col-5 col-sm-5">
+      <span style="position: absolute; right: 70px;">{{platform.games.length}} Games</span>
     </div>
-    <div class="col-2 col-sm-2">
-      <i class="fas fa-link fa-xs colorBlue"></i>
-    </div>
-    </div>
+ </div>
 </div>
