--- a/src/styles.css
+++ b/src/styles.css
@@ -146,6 +146,27 @@ li.nav-item:last-child {
 }
 /************ PLATFORM LIST ******************/
 
+/************ PLATFORM GAMES ******************/
+.newGameOfPlatform{
+    border-bottom: 1px dotted #262a40;
+    margin: 36px 0;
+    padding: 0 0 18px 0;
+}
+.screenshotPlatformGame{
+    border-radius: 18px; 
+    cursor: pointer;
+    padding: 10px;
+    transition: all 0.15s ease-in-out;
+}
+.screenshotPlatformGame:hover{
+    border-radius: 18px; 
+    cursor: pointer;
+    padding: 15px 15px 10px 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+/************ PLATFORM GAMES ******************/
+
 @media screen and (max-width: 768px) {
 
 li.nav-item {
