--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,7 +1,7 @@
   <div class="containerScreenshotGameGb">
     <img *ngIf="screenshotGameBg" [src]="screenshotGameBg.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'1080p'" class="blurryScreenshotGameGb"/>
     <div class="container containerScreenshotGameGbColor">
-      <img  *ngIf="game.cover" [src]="game.cover['cloudinary_id'] | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" class="coverBig"
+      <img  *ngIf="game.cover" [src]="game.cover['cloudinary_id'] | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'cover_med'" class="coverBig"
         style="height: 100%;" />
         <img *ngIf="screenshotGameBg" [src]="screenshotGameBg.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'1080p'" />
       </div>
@@ -16,17 +16,18 @@
           <h6 *ngIf="platform.name">{{platform.name}}</h6>
         </div>
       </div>
-      <div class="col-md-9" style="padding: 20px 0 0 0;">
-          <img *ngIf="game.cover" [src]="game.cover['cloudinary_id'] | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" class="coverSmall rounded-circle" style="display: inline-block;">
+      <div class="col-md-9" style="padding: 20px 15px 0 15px;">
+          <img *ngIf="game.cover" [src]="game.cover['cloudinary_id'] | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'thumb'" class="coverSmall rounded-circle" style="display: inline-block;">
           <h1 style="display: inline-block;" *ngIf="game.name">{{game.name}}</h1>    
-          <p>{{game.summary}}</p>
-          <div *ngFor="let screenshot of screenshotsGame">
-            <img (click)="openLightBox(screenshot.cloudinary_id)" [src]="screenshot.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" class="img-fluid" style="border-radius: 8px; margin: 10px 0;"/>
+          <h5>{{game.summary}}</h5>
+          <div class="container p-0">
+            <div class="row">
+              <div class="col-12 col-sm-6 col-md-4" *ngFor="let screenshot of screenshotsGame">
+                <img (click)="openLightBox(screenshot.cloudinary_id)" [src]="screenshot.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" class="img-fluid screenshotPlatformGame"/>
+              </div>   
+            </div>
           </div>
       </div>
     </div>
-      
-    
-    <br/><br/>
   </div>
 
