Fix image issue in lightbox effect Fix search button

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-4"></div>  
-  <div class="col-3 no-gutters">
+  <div class="col-3 no-gutters pr-0">
     <input #searchGameInput type="search" class="form-control border-secondary border-right-0 rounded-0" placeholder="Search game" (keyup.enter)="searchGame(searchGameInput.value)"/>
   </div>
-  <div class="col-1 no-gutters">
+  <div class="col-1 no-gutters pl-0">
     <button class="btn btn-outline-secondary border-left-0 rounded-0 rounded-right"><i class="fa fa-search"></i></button>
   </div>
   <div class="col-4"></div>
