--- a/src/app/components/platform/platform.component.html
+++ b/src/app/components/platform/platform.component.html
@@ -14,7 +14,8 @@
       </div>
       <div class="row mt-4">
         <div class="col-12 col-md-4" *ngFor="let screenshot of NewGameOfPlatform.game.screenshots, let i = index">
-            <img [src]="screenshot.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" (click)="openLightBox(screenshot.cloudinary_id)" *ngIf="i<3" class="img-fluid screenshotPlatformGame" />
+            <!-- <img [src]="screenshot.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" (click)="openLightBox(screenshot.cloudinary_id)" *ngIf="i<3" class="img-fluid screenshotPlatformGame" /> -->
+            <img [src]="screenshot.cloudinary_id | domseguro: 'https://images.igdb.com/igdb/image/upload/t_':'720p'" *ngIf="i<3" class="img-fluid screenshotPlatformGame" />
         </div>
       </div>
   </div>
