--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -11,10 +11,18 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
     <ul class="navbar-nav mt-2 mt-lg-0">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['games']">GAMES</a>
+        <a class="nav-link" [routerLink]="['games']">
+          <fa-icon icon="cloud"></fa-icon>
+          GAMESs
+          <fa-icon icon="user"></fa-icon>
+        </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['platforms']">PLATFORMS </a>
+        <a class="nav-link" [routerLink]="['platforms']">
+          <fa-icon icon="star"></fa-icon>
+          PLATFORMS
+          <fa-icon icon="camera"></fa-icon>
+        </a>
       </li>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
